5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1836_2604.log
== TEST (2019-06-27 07:59:54) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
for i in range(shape(a)[0]):
print(max(a[i]))
-- ERROR:
File "XXXX", line 5
    print(max(a[i]))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:01:05) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
for i in range(shape(a)[0]):
	print(max(a[i]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 08:01:29) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
for i in range(shape(a)[0]):
	print(max(a[i]))
-- EXECUTION TIME:
1.13525
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
